@@ -3,6 +3,7 @@ bin/db4-2-db5
 bin/db5-valid
 bin/fix-zanata-map
 bin/publican
+book_templates/cover.tmpl
 Build.PL
 CC0
 Changes
