@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="Common_Content/css/default.css" type="text/css" />
+<style>
+div.logo {
+	background-image: url([%- logo -%]);
+}
+</style>
+</head>
+<body class="cover">
+	<div class="logo"></div>
+	<div class="product">[%- product -%]</div>
+	<div class="docname">[%- docname -%]</div>
+	<div class="subtitle">[%- subtitle -%]</div>
+	<div class="edition">[%- edition -%]</div>
+</body>
+
+</html>
