@@ -1633,3 +1633,67 @@ div.toc > dl > dt {
 .task {
 /*	page-break-inside: avoid; */
 }
+
+/* Cover Page styles */
+
+html {
+	height: 280mm;
+}
+
+body.cover {
+	height: 100%;
+	background-color: white;
+	margin: 0px;
+	padding: 0px;
+}
+
+body.cover div.logo {
+	height: 50%;
+	margin-top: 15mm;
+}
+
+body.cover div.product {
+	height: 10%;
+	background-color: #336699;
+	font-size: 80px;
+	font-weight: bold;
+	color: white;
+	text-align: center;
+	font-family: serif;
+	background-image: -ms-linear-gradient(top, #1468AA 0%, #003E6F 100%);
+	background-image: -moz-linear-gradient(top, #1468AA 0%, #003E6F 100%);
+	background-image: -o-linear-gradient(top, #1468AA 0%, #003E6F 100%);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #1468AA), color-stop(1, #003E6F));
+	background-image: -webkit-linear-gradient(top, #1468AA 0%, #003E6F 100%);
+	background-image: linear-gradient(to bottom, #1468AA 0%, #003E6F 100%);
+}
+
+body.cover div.docname {
+	height: 10%;
+	text-align: center;
+	font-size: 60px;
+	font-weight: bold;
+	color: black;
+	background-color: white;
+}
+
+body.cover div.subtitle {
+	height: 20%;
+	font-weight: bold;
+	text-align: center;
+	font-size: 20px;
+	color: black;
+	padding-left: 5em;
+	padding-right: 5em;
+	background-color: white;
+}
+
+body.cover div.edition {
+	height: 2em;
+	line-height: 2em;
+	text-align: center;
+	font-weight: bold;
+	font-size: 20px;
+	background-color: #445566;
+}
+
