@@ -14,6 +14,7 @@
   - Remove hard coded border from tables. BZ #875967
   - Allow menu_category to be localisable. BZ #872432
   - Fix UTF8 in brand_path breaking build. BZ #875021
+  - Support wkhtmltopdf cover pages. BZ #874344
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
